[package]
name = "esp-idf"
version = "0.1.0"
authors = ["MnlPhlp <online@philipp-manuel.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.34", default-features = false }
esp-idf-hal = { version = "0.43", optional = true, default-features = false }
esp-idf-svc = { version = "0.48", optional = true, default-features = false , features = ["std", "binstart"] }
embedded-hal = "1.0.0"

uln2003 = { path = "../.." }

[build-dependencies]
embuild = "0.31.2"
