[package]
name = "esp-idf"
version = "0.1.0"
authors = ["MnlPhlp <online@philipp-manuel.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-hal = { version = "0.43" }
esp-idf-svc = { version = "0.48", default-features = false , features = ["std", "binstart", "alloc"] }
embedded-hal = "1.0.0"

uln2003 = { path = "../.." }

[build-dependencies]
embuild = { version = "0.31", features = ["espidf"] }
